added about function

--- a/Baseball/app/src/main/res/values/strings.xml
+++ b/Baseball/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="exit">exit</string>
     <string name="ballsCount">0</string>
     <string name="strikesCount">0</string>
+    <string name="about">about</string>
 </resources>
